--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -28,7 +28,7 @@
     justify-content: end;
     align-items: start;
     color: white;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 45%, rgba(0, 0, 0, 0.8) 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 45%, rgba(0, 0, 0, 0.8) 100%);
 }
 
 .hero__subtext {
@@ -54,6 +54,7 @@
     -webkit-text-fill-color: transparent; */
     background-image: linear-gradient(180deg, rgba(18, 21, 23, 0.5) 0%, rgba(18, 21, 23, 0.05) 100%);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
